Refactor GTFSFetcher and MainPage to improve bus position fetching; change return type to Set<BusWaypoint> and update UI handling GTFS in realtime aggiunti